# ComfyUI-Gemini-Direct

./: .gitignore  README.md  __init__.py  gemini_direct_nodes.py  prompt_studio_node.py  pyproject.toml  requirements.txt  style_transfer_node.py
data/styles/: boris_mikhailov.py  boris_savelev.py  daido_moriyama.py  ernst_haas.py  gueorgui_pinkhassov.py  hannah_starkey.py  harry_gruyaert.py  luigi_ghirri.py  ralph_gibson.py  saul_leiter.py
